[package]
name = "re-ttscat-edge-tts-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
edge-tts = { git = "https://github.com/ganlvtech/edge-tts.git", version = "0.1.0" }
form_urlencoded = "1.2.0"
